# discordpp

./: .gitignore  .gitmodules  Bot.cpp  Bot.h  CMakeLists.txt  Config.cmake.in  LICENSE  Licenses.md  Makefile  README.md  bot.cc  bot.hh  cmake_install.cmake  discordpp.cc  discordpp.hh  login.dat.example  main.cc  resource.hh
.github/: FUNDING.yml
discordpp/: alias.hh  bot.hh  botStruct.hh  call.hh  colors.hh  discordpp.hh  enum.hh  intents.hh  log.hh  macros.hh  plugin-overload.hh  restmodule.hh  snowflake.hh  util.hh  websocketmodule.hh
discordpp/macros/: defineCallClose.hh  defineCallOpen.hh
src/: bot.cc  discordpp.cc
